# facilpay-contracts

./: .gitignore  Cargo.toml  Makefile  PR_DESCRIPTION_ISSUE_144.md  README.md  SOLUTION_ISSUE_144.md  SOLUTION_MULTI_ROUND_DISPUTE.md  TODO.md  description.md  solution_141.md
contracts/admin/: Cargo.toml
contracts/admin/src/: lib.rs
contracts/payment/: Cargo.toml
contracts/payment/src/: lib.rs  schema_version_test.rs  test.rs  test_analytics.rs  test_cross_contract_escrow_verification.rs  test_fee_rebate.rs  test_fee_sweep.rs  test_finality_delay.rs  test_issue_113_115_119_120.rs  test_metadata.rs  test_metered_billing.rs  test_payment_channel.rs  test_payment_forward.rs  test_scheduled_payment.rs  test_spend_limits.rs  test_split_payment.rs  test_subscription_groups.rs  test_trial.rs
contracts/payment/test_snapshots/test/: test_cancel_already_cancelled_payment.1.json  test_cancel_multiple_payments_correct_modification.1.json  test_cancel_payment_unauthorized.1.json  test_cancel_refunded_payment.1.json  test_complete_already_completed_payment.1.json  test_complete_batch_payment_partial_failure.1.json  test_complete_batch_payment_success.1.json  test_complete_expired_payment_fails.1.json  test_complete_payment_event_emission.1.json  test_complete_payment_fails_insufficient_balance.1.json  test_complete_payment_fails_without_allowance.1.json  test_complete_payment_partial_allowance_with_exact_amount.1.json  test_complete_payment_status_is_completed_after_transfer.1.json  test_complete_payment_success.1.json  test_complete_payment_transfers_tokens_to_merchant.1.json  (+35 more)
(+80 files in other folders)
